# GPTExamples

./: .editorconfig  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  .talismanrc  DOCKER.md  README.md  ollama-rag.ipynb  requirements.txt
anythingllm/: .env  (+2 more)
langchain/: .cspell.json  .env  .pyproject.toml  build_dataset.py  build_embeddings.py  chromadb_connections.py  cspell.json  llm_agents.py  llm_chat.py  main.ipynb  main.py  pyproject.toml  rag_pdf_bezeqint.py  requirements.txt  tests.py  working_rag_chroma_local.ipynb
langchain/jupyter/: main.ipynb  rag_chroma.ipynb
langchain/loaders/: directoryJSONLoader.py  directoryMarkdownLoader.py  directoryPythonLoader.py  directoryURLYoutubeLoader.py
langchain/rag/: bezeqint_rag_pdf.py  rag.py
langchain/retrievers/: hackerNews.py  jsonLoader.py
langchain/src/: __init__.py  chromdb_tools.py  config_tools.py  config_vars.py  data_retrievers.py  documents_embedding.py  documents_loader.py  file_loaders.py  llm_prompt_template.py  llm_tools.py  local_tools.py  ollama_chat.py  text_splitters.py  vector_store.py
langchain/src/llm_project/: __init__.py  embeddings.py  llm_model.py  loader_class_example.py  loaders.py  retrievers.py  splitters.py  tests.py  vector_store.py
langchain/text_splitters/: directoryPythonLoader.py
langchain/vector_stores/: ChromadbVectorStore.py  ChromadbVectorStore_create_collection.py  ChromadbVectorStore_delete_collection.py  ChromadbVectorStore_get_collection.py  ChromadbVectorStore_list_documents.py  chromadbVectorStore_add_data.py
(+72 files in other folders)
