# Source: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[tool.poetry]
name = "llm-langchain-project"
version = "0.1.0"
description = "A project for building LLM applications using LangChain"
authors = ["Tzahi Cohen <email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.232"  # Adjust based on the latest compatible version
openai = "^0.27.4"  # For OpenAI API access
faiss-cpu = "^1.7.4"  # Optional: For vector store indexing
numpy = "^1.23.5"  # LangChain often requires NumPy
pydantic = "^1.10.2"  # For schema validation
tiktoken = "^0.4.0"  # For token handling in OpenAI models

# Add any other dependencies as needed, for example:
# sentence-transformers for embedding models
# or llama-index for advanced document indexing

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"  # For testing
black = "^23.7.0"  # For code formatting
mypy = "^1.5.0"  # For type checking
flake8 = "^6.1.0"  # For linting
isort = "^5.12.0"  # For import sorting

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
strict = true
